--- a/FarmDirectSales/wwwroot/pages/farmer/statistics.html
+++ b/FarmDirectSales/wwwroot/pages/farmer/statistics.html
@@ -23,16 +23,13 @@
                         <a class="nav-link" href="dashboard.html">农户首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="products.html">我的产品</a>
+                        <a class="nav-link" href="products.html">商品管理</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="orders.html">订单管理</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="batch-products.html">批量管理</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="statistics.html">销售统计</a>
+                        <a class="nav-link active" href="statistics.html">销售统计</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -42,8 +39,7 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="farm-profile.html">农场资料</a>
-                            <a class="dropdown-item" href="products.html">我的产品</a>
-                            <a class="dropdown-item" href="batch-products.html">批量管理</a>
+                            <a class="dropdown-item" href="products.html">商品管理</a>
                             <a class="dropdown-item" href="orders.html">订单管理</a>
                             <a class="dropdown-item active" href="statistics.html">销售统计</a>
                             <a class="dropdown-item" href="profile.html">个人信息</a>
@@ -71,8 +67,7 @@
                 <div class="list-group">
                     <a href="dashboard.html" class="list-group-item list-group-item-action">农户首页</a>
                     <a href="farm-profile.html" class="list-group-item list-group-item-action">农场资料</a>
-                    <a href="products.html" class="list-group-item list-group-item-action">我的产品</a>
-                    <a href="batch-products.html" class="list-group-item list-group-item-action">批量管理</a>
+                    <a href="products.html" class="list-group-item list-group-item-action">商品管理</a>
                     <a href="orders.html" class="list-group-item list-group-item-action">订单管理</a>
                     <a href="statistics.html" class="list-group-item list-group-item-action active">销售统计</a>
                     <a href="profile.html" class="list-group-item list-group-item-action">个人信息</a>
