--- a/FarmDirectSales/wwwroot/index.html
+++ b/FarmDirectSales/wwwroot/index.html
@@ -426,9 +426,7 @@
                                     <div class="d-flex justify-content-between align-items-center">
                                         <span class="text-danger fw-bold">￥${product.price.toFixed(2)}</span>
                                         <span class="text-muted small">
-                                            ${product.averageRating ? 
-                                                `<i class="fas fa-star text-warning"></i> ${product.averageRating.toFixed(1)}` : 
-                                                ''}
+                                            库存: ${product.stock}
                                         </span>
                                     </div>
                                 </div>
