--- a/FarmDirectSales/wwwroot/pages/products.html
+++ b/FarmDirectSales/wwwroot/pages/products.html
@@ -65,7 +65,7 @@
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userMenuButton">
                             <li><a class="dropdown-item" href="/pages/user/profile.html"><i class="fas fa-user me-2"></i>个人中心</a></li>
                             <li><a class="dropdown-item" href="/pages/user/orders.html"><i class="fas fa-shopping-cart me-2"></i>我的订单</a></li>
-                            <li><a class="dropdown-item" href="/pages/user/reviews.html"><i class="fas fa-star me-2"></i>我的评价</a></li>
+                            
                             <li id="farmer-menu-item" class="d-none"><a class="dropdown-item" href="/pages/farmer/dashboard.html"><i class="fas fa-tractor me-2"></i>农户中心</a></li>
                             <li id="admin-menu-item" class="d-none"><a class="dropdown-item" href="/pages/admin/dashboard.html"><i class="fas fa-cogs me-2"></i>管理后台</a></li>
                             <li><hr class="dropdown-divider"></li>
@@ -102,7 +102,6 @@
                         <option value="default">默认排序</option>
                         <option value="price-asc">价格从低到高</option>
                         <option value="price-desc">价格从高到低</option>
-                        <option value="rating-desc">评分从高到低</option>
                         <option value="newest">最新上架</option>
                     </select>
                 </div>
@@ -406,9 +405,6 @@
                 case 'price-desc':
                     filteredProducts.sort((a, b) => b.price - a.price);
                     break;
-                case 'rating-desc':
-                    filteredProducts.sort((a, b) => (b.averageRating || 0) - (a.averageRating || 0));
-                    break;
                 case 'newest':
                     filteredProducts.sort((a, b) => new Date(b.createTime) - new Date(a.createTime));
                     break;
@@ -467,9 +463,7 @@
                                 <div class="d-flex justify-content-between align-items-center">
                                     <span class="text-danger fw-bold">￥${product.price.toFixed(2)}</span>
                                     <span class="text-muted small">
-                                        ${product.averageRating ? 
-                                            `<i class="fas fa-star text-warning"></i> ${product.averageRating.toFixed(1)}` : 
-                                            '暂无评分'}
+                                        库存: ${product.stock}
                                     </span>
                                 </div>
                             </div>
