优化农户管理功能，重新引用数据库

--- a/FarmDirectSales/wwwroot/pages/user/orders.html
+++ b/FarmDirectSales/wwwroot/pages/user/orders.html
@@ -1364,7 +1364,7 @@
                         </div>
                         <div class="timeline-content">
                             <h6 class="mb-0">申请退款中</h6>
-                            <p class="text-muted small mb-0">${formatFriendlyDateTime(order.shipTime)}</p>
+                            <p class="text-muted small mb-0">${formatFriendlyDateTime(order.refundRequestTime)}</p>
                             ${refundRequestInfo}
                         </div>
                     </div>
