--- a/FarmDirectSales/wwwroot/pages/farmer/orders.html
+++ b/FarmDirectSales/wwwroot/pages/farmer/orders.html
@@ -336,7 +336,7 @@
                                                 <h5 class="text-warning mb-3">用户申请退款，等待处理</h5>
                                                 <div><i class="fa fa-user text-primary me-1"></i><strong>申请人：</strong> ${orderDetail.user ? orderDetail.user.username : '未知用户'}</div>
                                                 <div><i class="fa fa-comment text-info me-1"></i><strong>申请原因：</strong> ${orderDetail.cancelReason || '未提供原因'}</div>
-                                                <div><i class="fa fa-clock text-warning me-1"></i><strong>申请时间：</strong> ${orderDetail.shipTime ? formatFriendlyDateTime(orderDetail.shipTime) : '未知'}</div>
+                                                <div><i class="fa fa-clock text-warning me-1"></i><strong>申请时间：</strong> ${orderDetail.refundRequestTime ? formatFriendlyDateTime(orderDetail.refundRequestTime) : '未知'}</div>
                                                 <div class="mt-3 alert alert-info py-2">
                                                     <i class="fa fa-info-circle me-1"></i>请尽快处理退款申请，保持良好的客户关系
                                                 </div>
@@ -1070,7 +1070,7 @@
                                                     <h5 class="text-warning mb-3">用户申请退款，等待处理</h5>
                                                     <div><i class="fa fa-user text-primary me-1"></i><strong>申请人：</strong> ${orderDetail.user ? orderDetail.user.username : '未知用户'}</div>
                                                     <div><i class="fa fa-comment text-info me-1"></i><strong>申请原因：</strong> ${orderDetail.cancelReason || '未提供原因'}</div>
-                                                    <div><i class="fa fa-clock text-warning me-1"></i><strong>申请时间：</strong> ${orderDetail.shipTime ? formatFriendlyDateTime(orderDetail.shipTime) : '未知'}</div>
+                                                    <div><i class="fa fa-clock text-warning me-1"></i><strong>申请时间：</strong> ${orderDetail.refundRequestTime ? formatFriendlyDateTime(orderDetail.refundRequestTime) : '未知'}</div>
                                                     <div class="mt-3 alert alert-info py-2">
                                                         <i class="fa fa-info-circle me-1"></i>请尽快处理退款申请，保持良好的客户关系
                                                     </div>
