配送区域的功能

--- a/FarmDirectSales/wwwroot/pages/admin/users.html
+++ b/FarmDirectSales/wwwroot/pages/admin/users.html
@@ -39,6 +39,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="statistics.html">统计分析</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="delivery-areas.html">配送区域管理</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="logs.html">系统日志</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profile.html">个人信息</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown" id="userDropdown" style="display: none;">
@@ -79,7 +88,7 @@
                     <a href="products.html" class="list-group-item list-group-item-action">产品管理</a>
                     <a href="orders.html" class="list-group-item list-group-item-action">订单管理</a>
                     <a href="statistics.html" class="list-group-item list-group-item-action">统计分析</a>
-                    <a href="reviews.html" class="list-group-item list-group-item-action">评价管理</a>
+                    <a href="delivery-areas.html" class="list-group-item list-group-item-action">配送区域管理</a>
                     <a href="logs.html" class="list-group-item list-group-item-action">系统日志</a>
                     <a href="profile.html" class="list-group-item list-group-item-action">个人信息</a>
                 </div>
