完善销售统计功能，和修复大量bug

--- a/FarmDirectSales/wwwroot/pages/farmer/dashboard.html
+++ b/FarmDirectSales/wwwroot/pages/farmer/dashboard.html
@@ -44,6 +44,7 @@
                             <a class="dropdown-item" href="farm-profile.html">农场资料</a>
                             <a class="dropdown-item" href="products.html">商品管理</a>
                             <a class="dropdown-item" href="orders.html">订单管理</a>
+                            <a class="dropdown-item" href="delivery-settings.html">配送设置</a>
                             <a class="dropdown-item" href="statistics.html">销售统计</a>
                             <a class="dropdown-item" href="profile.html">个人信息</a>
                             <div class="dropdown-divider"></div>
@@ -72,6 +73,7 @@
                     <a href="farm-profile.html" class="list-group-item list-group-item-action">农场资料</a>
                     <a href="products.html" class="list-group-item list-group-item-action">商品管理</a>
                     <a href="orders.html" class="list-group-item list-group-item-action">订单管理</a>
+                    <a href="delivery-settings.html" class="list-group-item list-group-item-action">配送设置</a>
                     <a href="statistics.html" class="list-group-item list-group-item-action">销售统计</a>
                     <a href="profile.html" class="list-group-item list-group-item-action">个人信息</a>
                 </div>
