--- a/FarmDirectSales/wwwroot/pages/farmer/statistics.html
+++ b/FarmDirectSales/wwwroot/pages/farmer/statistics.html
@@ -34,6 +34,9 @@
                         <a class="nav-link" href="orders.html">订单管理</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="delivery-settings.html">配送设置</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="statistics.html">销售统计</a>
                     </li>
                 </ul>
@@ -46,6 +49,7 @@
                             <a class="dropdown-item" href="farm-profile.html">农场资料</a>
                             <a class="dropdown-item" href="products.html">商品管理</a>
                             <a class="dropdown-item" href="orders.html">订单管理</a>
+                            <a class="dropdown-item" href="delivery-settings.html">配送设置</a>
                             <a class="dropdown-item active" href="statistics.html">销售统计</a>
                             <a class="dropdown-item" href="profile.html">个人信息</a>
                             <div class="dropdown-divider"></div>
@@ -74,6 +78,7 @@
                     <a href="farm-profile.html" class="list-group-item list-group-item-action">农场资料</a>
                     <a href="products.html" class="list-group-item list-group-item-action">商品管理</a>
                     <a href="orders.html" class="list-group-item list-group-item-action">订单管理</a>
+                    <a href="delivery-settings.html" class="list-group-item list-group-item-action">配送设置</a>
                     <a href="statistics.html" class="list-group-item list-group-item-action active">销售统计</a>
                     <a href="profile.html" class="list-group-item list-group-item-action">个人信息</a>
                 </div>
